Fix remove whitespaces from username, community's

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -527,5 +527,5 @@ button[disabled=disabled], button:disabled
     background: $disabled-color
     pointer-events: none
 
-.response
-    padding: 2vmin
+.response:not(:empty), .warningPattern
+    padding: 2vmin 0
